--- a/datingApp2-SPA/src/app/nav/nav.component.html
+++ b/datingApp2-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
       <a class="navbar-brand" href="#">DatingApp2</a>
-      <ul class="navbar-nav mr-auto">
+      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
        <li class="nav-item active">
          <a class="nav-link" href="#">Matches </a>
        </li>
@@ -9,7 +9,7 @@
          <a class="nav-link" href="#">Lists</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link " href="#">Messages</a>
+         <a class="nav-link" href="#">Messages</a>
        </li>
           </ul>
  
@@ -28,10 +28,10 @@
  
           <form *ngIf="loggedIn()" #LoginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
              <input class="form-control mr-sm-2" type="text" name="Username" 
-             placeholder="Username" required ="model.username">
+             placeholder="Username" required [(ngModel)]="model.username">
              <input class="form-control mr-sm-2" type="password" name="password" 
-             placeholder="password" required [(ngModel)]="model.password">
-             <button class="btn btn-success my-2 my-sm-0" type="submit">login</button>
+             placeholder="Password" required [(ngModel)]="model.password">
+             <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">login</button>
            </form>
   </div>
   
