--- a/datingApp2-SPA/src/app/nav/nav.component.html
+++ b/datingApp2-SPA/src/app/nav/nav.component.html
@@ -13,7 +13,10 @@
        </li>
           </ul>
  
-          <div *ngIf="loggedIn()" class="dropdown" dropdown> 
+          <div *ngIf="loggedIn()" class="dropdown" dropdown>
+            <span class="mr-1">
+              <img src="{{photoUrl}}" alt="">
+            </span>
              <a class="dropdown-toggle test-light" dropdownToggle >
                Welcome {{authService.decodeToken?.unique_name | titlecase}}
              </a>
